wxc, 2018/07/08, v0.0.13:
	1、libcpp_assistant加入对部分C++11特性的支持，以及namespace内的接口改成
		类静态成员函数

wxc, 2018/04/30, v0.0.12:
	1、tcp_app框架改进未完整数据包的处理逻辑，采用若干特殊码进行标识
	2、定时任务和网络请求处理操作加入耗时统计
	3、整理内置命令行选项值
	4、令重读部分配置项的操作可定制化
	5、增加set_proto_xxx()接口，以及两个报文头扩展字段操作的定制化接口
		parse_proto_header_extension() & assemble_proto_header_extension()

wxc, 2018/04/22, v0.0.11:
	1、simple_app移除需要实现make_session_id()的要求。

wxc, 2018/04/21, v0.0.10:
	1、libcpp_assistant增加若干API，以及修改若干函数名称或增加注释说明以提高代码可读性。
	2、tcp_app框架增加配置项/root/private/server-types/item。

wxc, 2018/04/19, v0.0.09:
	1、tcp_app框架增加对JSON格式消息的支持，并将报文头所有字段类型从无符号整型改成有符号整型。

wxc, 2018/04/15, v0.0.08:
	1、根据新的代码规范进行重构。

wxc, 2017/05/09, v0.0.07:
	1、确定报文头和报文体的基础部分的格式，且允许扩展。
	2、调通单线程的通用报文处理流程，但底层SeqBuf的指针管理仍有一些问题，
		可能会导致收/发包不全或程序崩溃。

wxc, 2017/04/25, v0.0.06:
	1、调通心跳和身份上报功能。

wxc, 2017/02/09, v0.0.05:
	1、增加TCP框架，已完成心跳和身份上报交互操作，编译通过，未运行通过。

wxc, 2016/12/31, v0.0.04:
	1、增加templates目录以及可利用templates来生成新项目的脚本。
	2、规范部分与templates相关的宏定义的使用，以及改善与此相关的代码的可读性。
	3、加is_quiet_mode()判断是否启用静默模式以减少程序启动时的信息输出。

wxc, 2016/12/23, v0.0.03:
	1、增加handles_now参数控制信号处理函数是否实时执行，以应对SIGSEGV之类的紧急信号。

wxc, 2016/12/20, v0.0.02:
	1、完成单进程框架初步的资源管理、定时任务管理、信号管理。
	2、修复valgrind报告的若干内存泄漏和依赖未初始化变量的跳转等缺陷。
	3、完善Makefile的install和check操作。

wxc, 2016/12/14, v0.0.01:
	1、完成命令行参数解析、配置文件读取功能。